--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.14",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
-    "typescript": "3.7.3"
+    "redux-saga": "^1.1.3",
+    "tslint-react": "^4.1.0",
+    "typescript-fsa": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
   }
 }
