--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@types/react": "16.9.14",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux-saga": "^1.1.3",
+    "styled-components": "^4.4.1",
     "tslint-react": "^4.1.0",
-    "typescript-fsa": "^3.0.0"
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
