--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.0",
+    "@types/yup": "^0.26.26",
+    "formik": "^2.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -20,7 +22,8 @@
     "styled-components": "^4.4.1",
     "tslint-react": "^4.1.0",
     "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.1"
+    "typescript-fsa-reducers": "^1.2.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
