--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@types/react": "16.9.14",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-redux": "^5.0.18",
     "@types/styled-components": "^4.4.0",
     "@types/yup": "^0.26.26",
     "formik": "^2.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.2.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
