--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.14",
     "@types/react-dom": "16.9.4",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
@@ -15,7 +16,9 @@
     "@types/yup": "^0.26.26",
     "formik": "^2.0.6",
     "react": "^16.12.0",
+    "react-activity": "^1.2.2",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
